--- a/view/login.html
+++ b/view/login.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
-        <img src="images/logo.jpeg" alt="some text" width=60 height=40>
+        <img src='images/logo.svg' />
         <div id='divLogin'>
             <p>
                 Acesse suas Ordens
@@ -35,8 +35,8 @@
                 <br/>
                 <input id='btnSubmit' type='submit' value='Acessar'>
             </form>
-            <a href="#">
-                <button>
+            <a href='#'>
+                <button id = "btnForgotPassword">
                     <b>
                         Esqueceu sua senha?
                     </b>
